...
            AppSpacing.vXxl,
            
            _isSubmitting
                ? const Center(child: CircularProgressIndicator())
                : AppButton(
                    onPressed: _submit,
                    text: 'Envoyer le devis',
                  ).animate().scale(delay: 500.ms),
          ],
        ),
      ),
    );
  }
...
